# excellent-regal

./: .gitignore  README.md  mix.exs
assets/: elm-package.json  index.html  package-lock.json  package.bat  package.json  package.sh  webpack.config.js
assets/css/: app.scss  gallery.scss  phoenix.css  phoenix.scss
assets/elm/: Main.elm
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
fixture_data/: fixtures.exs
lib/: convert.ex  regal.ex  regal_web.ex
lib/mix/tasks/: cleanup.ex  scan.ex
lib/regal/: application.ex  configuration.ex  file_helper.ex  galleries.ex  hash.ex  native.ex  repo.ex  scanner.ex  statistics.ex  task_helper.ex
lib/regal/configuration/: config_value.ex
lib/regal/galleries/: gallery.ex  gallery_picture.ex  picture.ex  picture_tag.ex  tag.ex
lib/regal/native/: file_filter.ex  filters.ex  scanned_image.ex
lib/regal/scanner/: file_filter.ex  filters.ex
lib/regal/worker/: thumbs_worker.ex
lib/regal_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/regal_web/channels/: user_socket.ex
lib/regal_web/controllers/: config_controller.ex  gallery_controller.ex  gallery_picture_controller.ex  page_controller.ex  picture_controller.ex  (+2 more)
native/regal_native/: Cargo.toml  README.md
native/regal_native/src/: lib.rs  scanner.rs  thumbs.rs
priv/: .gitignore
priv/repo/: seeds.exs
test/: test_helper.exs
test/regal/: configuration_test.exs  file_helper_test.exs  galleries_test.exs  native_test.exs  scanner_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+54 files in other folders)
